--- a/body-matter/3r/analisi-complexa.tex
+++ b/body-matter/3r/analisi-complexa.tex
@@ -6,7 +6,7 @@
 \section{Estructura dels nombres complexos}
     \subsection{Cos de nombres complexos}
     \begin{notation}[Conjunt de nombres complexos]
-        \label{notation:cos de nombres complexos}
+        \label{notation:cos-de-nombres-complexos}
         Denotarem
         \[
             \field{C} = \{a+b\iu\mid a,b\in\field{R}\}.
@@ -15,7 +15,7 @@
     \end{notation}
     \begin{definition}[Suma de nombres complexos]
         \labelname{suma de nombres complexos}
-        \label{def:suma de nombres complexos}
+        \label{def:suma-de-nombres-complexos}
         Siguin~\(a+b\iu\) i~\(c+d\iu\) dos nombres complexos.
         Aleshores definim la seva suma com
         \[
@@ -23,7 +23,7 @@
         \]
     \end{definition}
     \begin{observation}
-        \label{obs:els nombres complexos estan tancats per la suma}
+        \label{obs:els-nombres-complexos-estan-tancats-per-la-suma}
         Siguin~\(a+b\iu\) i~\(c+d\iu\) dos nombres complexos.
         Aleshores
         \[
@@ -31,7 +31,7 @@
         \]
     \end{observation}
     \begin{proposition}
-        \label{prop:els nombres complexos commuten per la suma}
+        \label{prop:els-nombres-complexos-commuten-per-la-suma}
         Siguin~\(a+b\iu\) i~\(c+d\iu\) dos nombres complexos.
         Aleshores
         \[
@@ -39,14 +39,14 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:suma de nombres complexos} tenim
+        Per la definició de \myref{def:suma-de-nombres-complexos} tenim
         \begin{align*}
             a+b\iu+c+d\iu &= (a+c)+(b+d)\iu \\
              &= (c+a)+(d+b)\iu = c+d\iu+a+b\iu.\qedhere
         \end{align*}
     \end{proof}
     \begin{proposition}
-        \label{prop:els nombres complexos són associatius per la suma}
+        \label{prop:els-nombres-complexos-son-associatius-per-la-suma}
         Siguin~\(a+b\iu\),~\(c+d\iu\) i~\(u+v\iu\) tres nombres complexos.
         Aleshores
         \[
@@ -55,7 +55,7 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:suma de nombres complexos} tenim
+        Per la definició de \myref{def:suma-de-nombres-complexos} tenim
         \begin{align*}
             (a+b\iu)+\big((c+d\iu)+(u+v\iu)\big)
                 &= (a+b\iu)+\big((c+u)+(d+v)\iu\big) \\
@@ -66,7 +66,7 @@
         \end{align*}
     \end{proof}
     \begin{proposition}
-        \label{prop:element neutre per la suma dels complexos}
+        \label{prop:element-neutre-per-la-suma-dels-complexos}
         Sigui~\(a+b\iu\) un nombre complex.
         Aleshores
         \[
@@ -74,13 +74,13 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:suma de nombres complexos} tenim
+        Per la definició de \myref{def:suma-de-nombres-complexos} tenim
         \[
             (a+b\iu)+0 = (a+0)+(b+0)\iu = a+b\iu.\qedhere
         \]
     \end{proof}
     \begin{proposition}
-        \label{prop:element invers per la suma dels complexos}
+        \label{prop:element-invers-per-la-suma-dels-complexos}
         Sigui~\(a+b\iu\) un nombre complex.
         Aleshores
         \[
@@ -88,14 +88,14 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:suma de nombres complexos} tenim
+        Per la definició de \myref{def:suma-de-nombres-complexos} tenim
         \[
             (a+b\iu)+(-a-b\iu) = (a-a)+(b-b)\iu = 0.\qedhere
         \]
     \end{proof}
     \begin{definition}[Producte de nombres complexos]
         \labelname{producte de nombres complexos}
-        \label{def:producte de nombres complexos}
+        \label{def:producte-de-nombres-complexos}
         Siguin~\(a+b\iu\) i~\(c+d\iu\) dos nombres complexos.
         Aleshores definim el seu producte com
         \[
@@ -103,7 +103,7 @@
         \]
     \end{definition}
     \begin{observation}
-        \label{obs:els nombres complexos estan tancats pel producte}
+        \label{obs:els-nombres-complexos-estan-tancats-pel-producte}
         Siguin~\(a+b\iu\) i~\(c+d\iu\) dos nombres complexos.
         Aleshores
         \[
@@ -111,7 +111,7 @@
         \]
     \end{observation}
     \begin{proposition}
-        \label{prop:els nombres complexos commuten pel producte}
+        \label{prop:els-nombres-complexos-commuten-pel-producte}
         Siguin~\(a+b\iu\) i~\(c+d\iu\) dos nombres complexos.
         Aleshores
         \[
@@ -119,14 +119,14 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:producte de nombres complexos} tenim
+        Per la definició de \myref{def:producte-de-nombres-complexos} tenim
         \begin{align*}
             (a+b\iu)(c+d\iu) &= (ac-bd)+(ad+bc)\iu \\
              &= (ca-bd)+(da+cb)\iu = (c+d\iu)(a+b\iu).\qedhere
         \end{align*}
     \end{proof}
     \begin{proposition}
-        \label{prop:els nombres complexos són associatius pel producte}
+        \label{prop:els-nombres-complexos-son-associatius-pel-producte}
         Siguin~\(a+b\iu\),~\(c+d\iu\) i~\(u+v\iu\) tres nombres complexos.
         Aleshores
         \[
@@ -137,7 +137,7 @@
     \begin{proof}
         Prenem~\(\alpha = a+b\iu\),~\(\beta = c+d\iu\)
         i~\(\gamma = u+v\iu\).
-        Per la definició de \myref{def:producte de nombres complexos} tenim
+        Per la definició de \myref{def:producte-de-nombres-complexos} tenim
         \begin{align*}
             \alpha\big(\beta\gamma\big)
                 &= (a+b\iu)\big((c+d\iu)(u+v\iu)\big) \\
@@ -154,7 +154,7 @@
         \end{align*}
     \end{proof}
     \begin{proposition}
-        \label{prop:element neutre pel producte dels complexos}
+        \label{prop:element-neutre-pel-producte-dels-complexos}
         Sigui~\(a+b\iu\) un nombre complex.
         Aleshores
         \[
@@ -162,13 +162,13 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:producte de nombres complexos} tenim
+        Per la definició de \myref{def:producte-de-nombres-complexos} tenim
         \[
             (a+b\iu)\cdot1 = (a\cdot1)+(b\cdot1)\iu = a+b\iu.\qedhere
         \]
     \end{proof}
     \begin{proposition}
-        \label{prop:element invers pel producte de nombres complexos}
+        \label{prop:element-invers-pel-producte-de-nombres-complexos}
         Sigui~\(a+b\iu\) un nombre complex.
         Aleshores
         \[
@@ -177,7 +177,7 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:producte de nombres complexos} tenim
+        Per la definició de \myref{def:producte-de-nombres-complexos} tenim
         \begin{align*}
             (a+b\iu)\Big(\frac{a}{a^{2}+b^{2}}+\frac{-b}{a^{2}+b^{2}}\iu\Big)
                 &= \Big(\frac{a^{2}}{a^{2}+b^{2}}-\frac{-b^{2}}{a^{2}+b^{2}}\Big)
@@ -187,7 +187,7 @@
         \end{align*}
     \end{proof}
     \begin{proposition}
-        \label{prop:distribuitva del producte respecte la suma de nombres complexos}
+        \label{prop:distribuitva-del-producte-respecte-la-suma-de-nombres-complexos}
         Siguin~\(a+b\iu\),~\(c+d\iu\) i~\(u+v\iu\) tres nombres complexos.
         Aleshores
         \[
@@ -195,8 +195,8 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:suma de nombres complexos}
-        i \myref{def:producte de nombres complexos} tenim
+        Per la definició de \myref{def:suma-de-nombres-complexos}
+        i \myref{def:producte-de-nombres-complexos} tenim
         \begin{align*}
             (a+b\iu)\big((c+d\iu)+(u+v\iu)\big)
                 &= (a+b\iu)\big((c+u)+(d+v)\iu\big) \\
@@ -208,14 +208,14 @@
         \end{align*}
     \end{proof}
     \begin{corollary}
-        \label{cor:els complexos formen un cos}
+        \label{cor:els-complexos-formen-un-cos}
         El conjunt~\(\field{C}\) amb la suma~\(+\)
         i el producte~\(\cdot\) és un cos.
     \end{corollary}
     \subsection{Propietats de nombres complexos}
     \begin{definition}[Conjugat d'un nombre complex]
         \labelname{conjugat d'un nombre complex}
-        \label{def:conjugat d'un nombre complex}
+        \label{def:conjugat-dun-nombre-complex}
         Sigui~\(z = a+b\iu\) un nombre complex.
         Aleshores definim
         \[
@@ -224,7 +224,7 @@
         com el conjugat de~\(z\).
     \end{definition}
     \begin{proposition}
-        \label{prop:el conjugat del conjugat d'un nombre complex és ell mateix}
+        \label{prop:el-conjugat-del-conjugat-dun-nombre-complex-es-ell-mateix}
         Sigui~\(z\) un nombre complex.
         Aleshores
         \[
@@ -232,10 +232,10 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:nombre complex} tenim que
+        Per la definició de \myref{def:nombre-complex} tenim que
         existeixen~\(a\),~\(b\in\field{R}\) tals que~\(z = a+b\iu\).
         Aleshores per la definició
-        de \myref{def:conjugat d'un nombre complex} tenim que
+        de \myref{def:conjugat-dun-nombre-complex} tenim que
         \begin{align*}
             \conjugat{\conjugat{z}} &= \conjugat{\conjugat{a+b\iu}} \\
                                     &= \conjugat{a-b\iu} \\
@@ -243,7 +243,7 @@
         \end{align*}
     \end{proof}
     \begin{proposition}
-        \label{prop:el conjugat de la suma és la suma de conjugats}
+        \label{prop:el-conjugat-de-la-suma-es-la-suma-de-conjugats}
         Siguin~\(z\) i~\(w\) dos nombres complexos.
         Aleshores
         \[
@@ -251,13 +251,13 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:nombre complex} tenim que
+        Per la definició de \myref{def:nombre-complex} tenim que
         existeixen~\(a\),~\(b\),~\(c\),~\(d\in\field{R}\) tals que
         \[
             z = a+b\iu\qquad\text{i}\qquad w = c+d\iu.
         \]
-        Aleshores per la definició de \myref{def:suma de nombres complexos}
-        i la definició de \myref{def:conjugat d'un nombre complex} trobem
+        Aleshores per la definició de \myref{def:suma-de-nombres-complexos}
+        i la definició de \myref{def:conjugat-dun-nombre-complex} trobem
         que
         \begin{align*}
             \conjugat{z+w} &= \conjugat{(a+b\iu)+(c+d\iu)} \\
@@ -269,7 +269,7 @@
         \end{align*}
     \end{proof}
     \begin{proposition}
-        \label{prop:el conjugat del producte és el producte de conjugats}
+        \label{prop:el-conjugat-del-producte-es-el-producte-de-conjugats}
         Siguin~\(z\) i~\(w\) dos nombres complexos.
         Aleshores
         \[
@@ -277,14 +277,14 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:nombre complex} tenim que existeixen
+        Per la definició de \myref{def:nombre-complex} tenim que existeixen
        ~\(a\),~\(b\),~\(c\),~\(d\in\field{R}\) tals que
         \[
             z = a+b\iu\qquad\text{i}\qquad w = c+d\iu.
         \]
         Aleshores per la definició
-        de \myref{def:producte de nombres complexos} i la definició
-        de \myref{def:conjugat d'un nombre complex} trobem que
+        de \myref{def:producte-de-nombres-complexos} i la definició
+        de \myref{def:conjugat-dun-nombre-complex} trobem que
         \begin{align*}
             \conjugat{zw} &= \conjugat{(a+b\iu)(c+d\iu)} \\
                           &= \conjugat{(ac-bd)+(ad+bc)\iu} \\
@@ -296,7 +296,7 @@
         \end{align*}
     \end{proof}
     \begin{proposition}
-        \label{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}
+        \label{prop:el-producte-dun-nombre-complex-pel-seu-conjugat-es-la-suma-dels-quadrats-de-la-seva-part-real-i-imaginaria}
         Sigui~\(z = a+b\iu\) un nombre complex.
         Aleshores
         \[
@@ -304,23 +304,23 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:producte de nombres complexos} i la
-        definició de \myref{def:conjugat d'un nombre complex} trobem que
+        Per la definició de \myref{def:producte-de-nombres-complexos} i la
+        definició de \myref{def:conjugat-dun-nombre-complex} trobem que
         \begin{align*}
             z\conjugat{z} &= (a+b\iu)\conjugat{a+b\iu} \\
                           &= (a+b\iu)(a-b\iu) = a^{2}+b^{2}.\qedhere
         \end{align*}
     \end{proof}
     \begin{proposition}
-        \label{prop:un nombre complex és igual al seu conjugat si i només si és un real}
+        \label{prop:un-nombre-complex-es-igual-al-seu-conjugat-si-i-nomes-si-es-un-real}
         Sigui~\(z\) un nombre complex.
         Aleshores~\(z = \conjugat{z}\) si i només si~\(z\in\field{R}\).
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:nombre complex} tenim que
+        Per la definició de \myref{def:nombre-complex} tenim que
         existeixen~\(a\),~\(b\in\field{R}\) tals que~\(z = a+b\iu\).
         Aleshores si tenim~\(z = \conjugat{z}\), per la definició
-        de \myref{def:conjugat d'un nombre complex} trobem que
+        de \myref{def:conjugat-dun-nombre-complex} trobem que
         \[
             a+b\iu = a-b\iu,
         \]
@@ -328,7 +328,7 @@
         trobem que~\(z = a\in\field{R}\).
     \end{proof}
     \begin{proposition}
-        \label{prop:inversa d'un nombre complex en funció del seu conjugat}
+        \label{prop:inversa-dun-nombre-complex-en-funcio-del-seu-conjugat}
         Sigui~\(z \neq 0\) un nombre complex.
         Aleshores
         \[
@@ -336,25 +336,25 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:nombre complex} tenim que
+        Per la definició de \myref{def:nombre-complex} tenim que
         existeixen~\(a\),~\(b\in\field{R}\) tals que~\(z = a+b\iu\).
         Aleshores tenim que
         \begin{align*}
             z\frac{\conjugat{z}}{z\conjugat{z}}
                 &= \frac{z\conjugat{z}}{z\conjugat{z}} \\
                 &= \frac{a^{2}+b^{2}}{a^{2}+b^{2}} = 1
-                \tag{\ref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}}
+                \tag{\ref{prop:el-producte-dun-nombre-complex-pel-seu-conjugat-es-la-suma-dels-quadrats-de-la-seva-part-real-i-imaginaria}}
         \end{align*}
-        i per la definició de \myref{def:l'invers d'un element d'un anell}
+        i per la definició de \myref{def:linvers-dun-element-dun-anell}
         hem acabat.
     \end{proof}
     \begin{definition}[Part real i part imaginària d'un nombre complex]
         \labelname{part real i part imaginària d'un nombre complex}
-        \label{def:part real i part imaginària d'un nombre complex}
+        \label{def:part-real-i-part-imaginaria-dun-nombre-complex}
         \labelname{part real d'un nombre complex}
-        \label{def:part real d'un nombre complex}
+        \label{def:part-real-dun-nombre-complex}
         \labelname{part imaginària d'un nombre complex}
-        \label{def:part imaginària d'un nombre complex}
+        \label{def:part-imaginaria-dun-nombre-complex}
         Sigui~\(z = a+b\iu\) un nombre complex.
         Aleshores definim
         \[
@@ -367,9 +367,9 @@
         com la part imaginària de~\(z\).
     \end{definition}
     \begin{proposition}
-        \label{prop:fórmules per la part real i part imaginària d'un nombre complex}
-        \label{prop:fórmula per la part real d'un nombre complex}
-        \label{prop:fórmula per la part imaginària d'un nombre complex}
+        \label{prop:formules-per-la-part-real-i-part-imaginaria-dun-nombre-complex}
+        \label{prop:formula-per-la-part-real-dun-nombre-complex}
+        \label{prop:formula-per-la-part-imaginaria-dun-nombre-complex}
         Sigui~\(z\) un nombre complex.
         Aleshores
         \[
@@ -378,7 +378,7 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:nombre complex} tenim que
+        Per la definició de \myref{def:nombre-complex} tenim que
         existeixen~\(a\),~\(b\in\field{R}\) tals que~\(z = a+b\iu\).
         Aleshores tenim que
         \[
@@ -391,13 +391,13 @@
                                         = \frac{2b\iu}{2\iu} = b = \Im(z),
         \]
         i per la definició
-        de \myref{def:part real i part imaginària d'un nombre complex} hem
+        de \myref{def:part-real-i-part-imaginaria-dun-nombre-complex} hem
         acabat.
     \end{proof}
     \subsection{Topologia de nombres complexos}
     \begin{definition}[Mòdul d'un nombre complex]
         \labelname{mòdul d'un nombre complex}
-        \label{def:mòdul d'un nombre complex}
+        \label{def:modul-dun-nombre-complex}
         Sigui~\(z = a+b\iu\) un nombre complex.
         Aleshores definim el seu mòdul com
         \[
@@ -405,13 +405,13 @@
         \]
     \end{definition}
     \begin{observation}
-        \label{obs:les parts real i imaginàries d'un complex són menors que el seu mòdul}
-        \label{obs:la part real d'un complex és menor que el seu mòdul}
-        \label{obs:la part imaginària d'un complex és menor que el seu mòdul}
+        \label{obs:les-parts-real-i-imaginaries-dun-complex-son-menors-que-el-seu-modul}
+        \label{obs:la-part-real-dun-complex-es-menor-que-el-seu-modul}
+        \label{obs:la-part-imaginaria-dun-complex-es-menor-que-el-seu-modul}
         \(\Re(z) \leq \modul{z}\),~\(\Im(z) \leq \modul{z}\).
     \end{observation}
     \begin{proposition}
-        \label{prop:el mòdul d'un nombre complex és l'arrel del nombre pel seu conjugat}
+        \label{prop:el-modul-dun-nombre-complex-es-larrel-del-nombre-pel-seu-conjugat}
         Sigui~\(z\) un nombre complex.
         Aleshores es satisfà
         \[
@@ -419,15 +419,15 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:nombre complex} tenim
+        Per la definició de \myref{def:nombre-complex} tenim
         que~\(z = a+b\iu\), i per la
-        proposició \myref{prop:el producte d'un nombre complex pel seu conjugat és la suma dels quadrats de la seva part real i imaginaria}
+        proposició \myref{prop:el-producte-dun-nombre-complex-pel-seu-conjugat-es-la-suma-dels-quadrats-de-la-seva-part-real-i-imaginaria}
         trobem que
         \begin{align*}
             z\conjugat{z} &= a^{2}+b^{2} \\
                           &= \big(\sqrt{a^{2}+b^{2}}\big)^{2}
                            = \modul{z}^{2},
-                          \tag{\ref{def:mòdul d'un nombre complex}}
+                          \tag{\ref{def:modul-dun-nombre-complex}}
         \end{align*}
         i per tant
         \[
@@ -436,7 +436,7 @@
     \end{proof}
     \begin{proposition}[Desigualtat triangular]
         \labelname{desigualtat triangular}
-        \label{prop:desigualta triangular nombres complexos}
+        \label{prop:desigualta-triangular-nombres-complexos}
         Siguin~\(z\) i~\(w\) dos nombres complexos.
         Aleshores
         \[
@@ -444,29 +444,29 @@
         \]
     \end{proposition}
     \begin{proof}
-        Per la definició de \myref{def:mòdul d'un nombre complex} tenim que
+        Per la definició de \myref{def:modul-dun-nombre-complex} tenim que
         \begin{align*}
             \modul{z+w}^{2} &= (z+w)\conjugat{(z+w)} \\
                             &= (z+w)(\conjugat{z}+\conjugat{w})
-                            \tag{\ref{prop:el conjugat de la suma és la suma de conjugats}} \\
+                            \tag{\ref{prop:el-conjugat-de-la-suma-es-la-suma-de-conjugats}} \\
                             &= z\conjugat{z}+z\conjugat{w}
                                +\conjugat{z}w+w\conjugat{w} \\
                             &= \modul{z}^{2}+\modul{w}^{2}
                                +\conjugat{z}w+z\conjugat{w}
-                            \tag{\ref{prop:el mòdul d'un nombre complex és l'arrel del nombre pel seu conjugat}} \\
+                            \tag{\ref{prop:el-modul-dun-nombre-complex-es-larrel-del-nombre-pel-seu-conjugat}} \\
                             &= \modul{z}^{2}+\modul{w}^{2}
                                +\conjugat{\conjugat{\conjugat{z}w}}+z\conjugat{w}
-                               \tag{\ref{prop:el conjugat del conjugat d'un nombre complex és ell mateix}} \\
+                               \tag{\ref{prop:el-conjugat-del-conjugat-dun-nombre-complex-es-ell-mateix}} \\
                             &= \modul{z}^{2}+\modul{w}^{2}
                                +\conjugat{\conjugat{\conjugat{z}}\,\conjugat{w}}+z\conjugat{w}
-                            \tag{\ref{prop:el conjugat del producte és el producte de conjugats}} \\
+                            \tag{\ref{prop:el-conjugat-del-producte-es-el-producte-de-conjugats}} \\
                             &= \modul{z}^{2}+\modul{w}^{2}
                                +\conjugat{z\conjugat{w}}+z\conjugat{w}
-                            \tag{\ref{prop:el conjugat del conjugat d'un nombre complex és ell mateix}} \\
+                            \tag{\ref{prop:el-conjugat-del-conjugat-dun-nombre-complex-es-ell-mateix}} \\
                             &= \modul{z}^{2}+\modul{w}^{2}+2\Re(zw)
-                            \tag{\ref{prop:fórmula per la part real d'un nombre complex}} \\
+                            \tag{\ref{prop:formula-per-la-part-real-dun-nombre-complex}} \\
                             &\leq \modul{z}^{2}+\modul{w}^{2}+2\modul{zw}
-                            \tag{\ref{obs:la part real d'un complex és menor que el seu mòdul}} \\
+                            \tag{\ref{obs:la-part-real-dun-complex-es-menor-que-el-seu-modul}} \\
                             &\leq \modul{z}^{2}+\modul{w}^{2}
                                   +2\modul{z}\modul{w} \\
                             &= (\modul{z}+\modul{w})^{2}
