--- a/body-matter/temp-intro.tex
+++ b/body-matter/temp-intro.tex
@@ -17,32 +17,32 @@
 \section{Àlgebra lineal}
     \subsection{Definicions}
     \begin{definition}[Forma bilineal]
-        \labelname{forma bilineal}\label{def:forma bilineal}
+        \labelname{forma bilineal}\label{def:forma-bilineal}
         Doble la linealitat, doble el poder.
     \end{definition}
     \begin{definition}[Forma bilineal definida estrictament positiva o negativa]
-        \labelname{forma bilineal definida estrictament positiva o negativa}\label{def:bilineal definida estrictament positiva/negativa}
+        \labelname{forma bilineal definida estrictament positiva o negativa}\label{def:bilineal-definida-estrictament-positiva-negativa}
         Sigui~\(M\) una forma bilineal simètrica.
         Preguntar a en Cedò.
     \end{definition}
     \begin{definition}[Norma d'una aplicació lineal]
-        \labelname{norma d'una aplicació lineal}\label{def:Norma d'una aplicació lineal}
+        \labelname{norma d'una aplicació lineal}\label{def:Norma-duna-aplicacio-lineal}
     \end{definition}
     \begin{definition}[Producte escalar]
-        \labelname{producte escalar}\label{def:producte escalar}
+        \labelname{producte escalar}\label{def:producte-escalar}
         És lineal i més coses.
     \end{definition}
     \begin{definition}[Norma d'un vector]
-        \labelname{norma d'un vector}\label{def:norma d'un vector}
+        \labelname{norma d'un vector}\label{def:norma-dun-vector}
         \(\norm{\vec{v}}=\sqrt{\prodesc{\vec{v}}{\vec{v}}}\).
     \end{definition}
     \begin{definition}[Dependència lineal]
-        \labelname{dependència lineal}\label{def:dependència lineal}
-        \labelname{vectors linealment dependents}\label{def:vectors linealment dependents}
+        \labelname{dependència lineal}\label{def:dependencia-lineal}
+        \labelname{vectors linealment dependents}\label{def:vectors-linealment-dependents}
     \end{definition}
     \subsection{Proposicions}
     \begin{proposition}
-        \label{prop:determinant diferent de zero linealment independents}
+        \label{prop:determinant-diferent-de-zero-linealment-independents}
         Vectors linealment independents~\(\sii\) determinant no nul.
     \end{proposition}
     \subsection{Teoremes}
@@ -62,32 +62,32 @@
 \section{Funcions de variable real}
     \subsection{Definicions}
     \begin{definition}[Imatge]
-        \labelname{imatge d'una aplicació}\label{def:imatge d'una aplicació}
+        \labelname{imatge d'una aplicació}\label{def:imatge-duna-aplicacio}
         Siguin~\(X\) i~\(Y\) dos conjunts,~\(A\) un subconjunt de~\(X\) i~\(f\colon X\longrightarrow Y\) una aplicació.
         Aleshores definim
         \[\Ima_{A}(f)=\{f(a)\in Y\mid a\in A\}\]
         com la imatge de~\(f\) per~\(A\).
     \end{definition}
     \begin{definition}[Antiimatge]
-        \labelname{antiimatge d'una aplicació}\label{def:antiimatge d'una aplicació}
+        \labelname{antiimatge d'una aplicació}\label{def:antiimatge-duna-aplicacio}
         Siguin~\(X\) i~\(Y\) dos conjunts,~\(B\) un subconjunt de~\(Y\) i~\(f\colon X\longrightarrow Y\) una aplicació.
         Aleshores definim
         \[\Antiima_{B}(f)=\{x\in X\mid f(x)=b\text{ per a cert }b\in B\}\]
         com la antiimatge de~\(f\) per~\(B\).
     \end{definition}
     \begin{definition}[Límit]
-        \labelname{límit}\label{def:límit}\
+        \labelname{límit}\label{def:limit}\
     \end{definition}
     \begin{definition}[Funció contínua]
-        \labelname{funció contínua}\label{def:funcio continua}\label{def:funció contínua}
+        \labelname{funció contínua}\label{def:funcio-continua}\label{def:funcio-continua}
         Sigui~\(f\) una funció.
         Direm que~\(f\) és contínua en~\(a\) si
         \[\lim_{x\to a}f(x)=f(a).\]
     \end{definition}
     \begin{definition}[Partició, poligonal i longitud d'una poligonal]
-        \labelname{partició}\label{def:partició}
+        \labelname{partició}\label{def:particio}
         \labelname{poligonal}\label{def:poligonal}
-        \labelname{longitud d'una poligonal}\label{def:longitud de poligonal}
+        \labelname{longitud d'una poligonal}\label{def:longitud-de-poligonal}
         Sigui~\((a,b)\) un interval de~\(\mathbb{R}\).
         Direm que una partició de~\((a,b)\) és un conjunt de escalars~\(t_{0},\dots,t_{n}\in[a,b]\) que compleixen~\(a=t_{0}<\dots<t_{n}=b\).
         Direm que~\(t_{0},\dots,t_{n}\) són els nodes de la partició.
@@ -99,7 +99,7 @@
         \[\Long(P_{n})=\sum_{i=0}^{n-1}\left\lVert f(t_{i+1})-f(t_{i})\right\rVert.\]
     \end{definition}
     \begin{definition}[Classe de diferenciabilitat d'una funció]
-        \labelname{classe de diferenciabilitat d'una funció}\label{def:Classe de diferenciabilitat}
+        \labelname{classe de diferenciabilitat d'una funció}\label{def:Classe-de-diferenciabilitat}
         Sigui~\(f\) una funció~\(n\)-vegades diferenciable amb~\(f^{(n)}\) contínua.
         Direm que~\(f\) és de classe~\(\mathcal{C}^{n}\) o que~\(f\in\mathcal{C}^{n}\).
     \end{definition}
@@ -115,7 +115,7 @@
         \(A(h)=\omicron(B(h))\dots\)
     \end{definition}
     \subsection{Proposicions}
-    \begin{proposition}\label{prop:Derivable implica contínua}
+    \begin{proposition}\label{prop:Derivable-implica-continua}
         Siguin~\(I\subseteq\mathbb{R}\) un interval i~\(f\colon I\to\mathbb{R}\) una funció.
         Aleshores, si~\(f\) és derivable en un punt~\(a\in I\),~\(f\) és contínua en~\(a\).
     \end{proposition}
@@ -129,7 +129,7 @@
     \end{proposition}
     \subsection{Teoremes}
     \begin{theorem}[Equivalència entre normes]
-        \labelname{Teorema de l'equivalència entre normes}\label{thm:Equivalència de normes}
+        \labelname{Teorema de l'equivalència entre normes}\label{thm:Equivalencia-de-normes}
         Si~\(q(x)\) és una norma existeixen~\(m,M\in\mathbb{R}^{+}\) tals que~\(m\left\lVert x\right\rVert\leq q(x)\leq M\left\lVert x\right\rVert\) per a tot~\(x\in\mathbb{R}^{m}\).
     \end{theorem}
     \begin{theorem}[Teorema del Valor Mig]
@@ -137,16 +137,16 @@
         \emph{hmm trivial}
     \end{theorem}
     \begin{theorem}[Desigualtat de Cauchy-Schwarz]
-        \labelname{Teorema de la Desigualtat de Cauchy-Schwarz}\label{thm:Desigualtat de C-S}
+        \labelname{Teorema de la Desigualtat de Cauchy-Schwarz}\label{thm:Desigualtat-de-C-S}
     \end{theorem}
     \begin{theorem}[Teorema de Taylor]%Teorema de l'error de Taylor?
-        \labelname{Teorema de Taylor}\label{thm:Teorema de Taylor} %caldrà adaptar-lo
+        \labelname{Teorema de Taylor}\label{thm:Teorema-de-Taylor} %caldrà adaptar-lo
         Siguin~\((a,b)\) un interval obert de~\(\mathbb{R}\) i~\(f\colon(a,b)\rightarrow\mathbb{R}\) una funció de classe~\(\mathcal{C}^{n}\).
         Aleshores, per a dos punts~\(x,c\in(a,b)\), amb~\(x<c\), existeix un punt~\(x_{1}\in(x,c)\) tal que
         \[f(x)=f(c)+\sum_{k=1}^{n-1}\frac{f^{(k)}(c)}{k!}(x-c)^{k}+\frac{f^{(n)}(x_{1})}{n!}(x-c)^{n}.\]
     \end{theorem}
     \begin{theorem}[Teorema de Weierstrass]
-        \labelname{Teorema de Weierstrass}\label{thm:Weierstrass màxims i mínims múltiples variables}
+        \labelname{Teorema de Weierstrass}\label{thm:Weierstrass-maxims-i-minims-multiples-variables}
         Siguin~\(U\subseteq\mathbb{R}^{d}\) un obert i~\(f\colon U\to\mathbb{R}\) una funció.
         Aleshores, donat un compacte~\(S\subset U\), si~\(f\) és contínua en~\(S\),~\(f\) té un màxim i un mínim absoluts en~\(S\).
     \end{theorem}
@@ -154,41 +154,41 @@
         \labelname{Teorema del sandvitx}\label{thm:sandvitx}
     \end{theorem}
     \begin{theorem}[Teorema de Rolle]
-        \labelname{Teorema de Rolle}\label{thm:Teorema de Rolle}
+        \labelname{Teorema de Rolle}\label{thm:Teorema-de-Rolle}
         Sigui~\(f\colon[a,b]\subset\mathbb{R}\longrightarrow\mathbb{R}\) una funció derivable en~\((a,b)\) tal que~\(f(a)=f(b)\).
         Aleshores existeix un cert~\(c\in(a,b)\) tal que~\(f'(c)=0\).
     \end{theorem}
     \begin{theorem}[Teorema Fonamental del Càlcul]
-        \labelname{Teorema Fonamental del Càlcul}\label{thm:Teorema Fonamental del Càlcul}
+        \labelname{Teorema Fonamental del Càlcul}\label{thm:Teorema-Fonamental-del-Calcul}
         Siguin~\([a,b]\) un interval de~\(\mathbb{R}\),~\(f\colon[a,b]\longrightarrow\mathbb{R}\) una funció contínua en~\([a,b]\) i
         \[F(x)=\int_{a}^{x}f(t)dt\]
         una funció.
         Aleshores~\(F(x)\) és derivable en~\([a,b]\) i~\(F'(x)=f(x)\) per a tot~\(x\) de~\([a,b]\).
     \end{theorem}
     \begin{theorem}[Teorema de Bolzano-Weierstrass]
-        \labelname{Teorema de Bolzano-Weierstrass}\label{thm:Teorema de Bolzano-Weierstrass}
+        \labelname{Teorema de Bolzano-Weierstrass}\label{thm:Teorema-de-Bolzano-Weierstrass}
         Successió acotada té parcial convergent
     \end{theorem}
 \section{Trobar lloc per tot això}
     \begin{definition}[Conjunt obert, tancat...]
-        \labelname{conjunt obert}\label{def:obert CDVO}
-        \labelname{conjunt tancat}\label{def:tancat CDVO}\label{todo:conjunt definit per desigualtats estrictes és compacte}
+        \labelname{conjunt obert}\label{def:obert-CDVO}
+        \labelname{conjunt tancat}\label{def:tancat-CDVO}\label{todo:conjunt-definit-per-desigualtats-estrictes-es-compacte}
     \end{definition}
     \begin{definition}[Continuïtat uniforme]
-        \labelname{continuïtat uniforme}\label{def:uniformement contínua}
+        \labelname{continuïtat uniforme}\label{def:uniformement-continua}
         Siguin~\(U\subseteq\mathbb{R}^{d},V\subseteq\mathbb{R}^{m}\) dos oberts i~\(f\colon U\to V\) una funció.
         Aleshores direm que~\(f\) és uniformement contínua en un conjunt~\(S\subseteq U\) si per a tot~\(\varepsilon>0\) existeix un~\(\delta>0\) tals que
         \[d_{U}(x,y)<\varepsilon\text{ i }d_{V}(f(x)-f(y))<\delta\]
         per a tot punt~\(x,y\in U\).
     \end{definition}
     \begin{theorem}[Teorema de Heine]
-        \labelname{Teorema de Heine}\label{thm:Teorema de Heine}
+        \labelname{Teorema de Heine}\label{thm:Teorema-de-Heine}
         Siguin~\(U\subseteq\mathbb{R}^{d}\) dos oberts,~\(S\subset U\) un compacte i~\(f\colon U\to\mathbb{R}^{m}\) una funció contínua.
         Aleshores~\(f\) és uniformement contínua en~\(S\).
         %pàg 91 de Mathematical Analysis d'en Apostol (55 del pdf)
     \end{theorem}
     \begin{definition}[Funció indicatriu]
-        \labelname{funció indicatriu}\label{def:funció indicatriu}
+        \labelname{funció indicatriu}\label{def:funcio-indicatriu}
         Siguin~\(X\) un conjunt i~\(A\subseteq X\) un subconjunt de~\(X\).
         Definim la funció indicatriu de~\(A\) com una funció
         \[1_{A}\colon X\longrightarrow\{0,1\}\]
@@ -202,32 +202,32 @@
     \end{definition}
     \subsection{Complexos}
     \begin{definition}[Nombre complex]
-        \labelname{nombre complex}\label{def:nombre complex}
-        \labelname{unitat imaginària}\label{def:unitat imaginària}
+        \labelname{nombre complex}\label{def:nombre-complex}
+        \labelname{unitat imaginària}\label{def:unitat-imaginaria}
         Siguin~\(a\) i~\(b\) dos nombres reals,~\(\iu\) una constant que satisfà~\(\iu^{2}=-1\) i
         \[z=a+b\iu.\]
         Aleshores direm que~\(z\) és un nombre complex i que~\(\iu\) és la unitat imaginària.
     \end{definition}
     \begin{definition}[Integral d'una funció complexa]
-        \labelname{integral d'una funció complexa}\label{def:integral d'una funció complexa}
+        \labelname{integral d'una funció complexa}\label{def:integral-duna-funcio-complexa}
         Sigui~\(f\) una funció complexa i~\(a\) i~\(b\) dos reals.
         Aleshores definim
         \[\int_{a}^{b}f(x)\diff x=\int_{a}^{b}\Re(f(x))\diff x+\iu\int_{a}^{b}\Im(f(x))\diff x\]
         com la integral de~\(f\).
     \end{definition}
     \begin{definition}[Unió disjunta]
-        \labelname{unió disjunta}\label{def:unió disjunta}
+        \labelname{unió disjunta}\label{def:unio-disjunta}
         Siguin~\(A\) i~\(B\) dos conjunts.
         Aleshores definim
         \[A\uniodisjunta B=(A\times\{0\})\cup(B\times\{1\})\]
         com la unió disjunta entre~\(A\) i~\(B\).
     \end{definition}
     \begin{definition}[Vectors perpendiculars]
-        \labelname{vectors perpendiculars}\label{def:vectors perpendiculars}
+        \labelname{vectors perpendiculars}\label{def:vectors-perpendiculars}
         \[\prodesc{\vec{u}}{\vec{v}}=0.\]
     \end{definition}
 %    \begin{theorem}[Teorema de la divisió Euclidiana]
-%        \labelname{Teorema de la divisió Euclidiana}\label{thm:divisió euclidiana}
+%        \labelname{Teorema de la divisió Euclidiana}\label{thm:divisio-euclidiana}
 %    \end{theorem}
 %    \begin{history}[Who's it gonna be]
 %        In a right triangle, the square of the hypotenuse is equal to the sum of the squares of the catheti.
@@ -236,14 +236,14 @@
     \section{Equacions diferencials ordinàries \rom{1}}
     \subsection{Teoria qualitativa}
     \begin{observation}
-        \label{obs:podem entendre les equacions diferencials autònomes com camps vectorials}
+        \label{obs:podem-entendre-les-equacions-diferencials-autonomes-com-camps-vectorials}
         Sigui
         \[\dot{u}(t)=X(u(t))\]
         una equació diferencial autònoma sobre un obert~\(\obert{U}\subseteq\mathbb{R}^{n}\) amb~\(X\in\mathcal{C}^{1}\).
         Aleshores la funció~\(X\) és un camp vectorial.
     \end{observation}
     \begin{definition}[Òrbites]
-        \labelname{òrbita d'una equació diferencial}\label{def:òrbita d'una equació diferencial}
+        \labelname{òrbita d'una equació diferencial}\label{def:orbita-duna-equacio-diferencial}
         Sigui~\(\varphi\) una solució d'una equació diferencial autònoma
         \[\dot{u}(t)=X(u(t))\]
         on~\(X\in\mathcal{C}^{1}\).
@@ -266,7 +266,7 @@
                 \displaystyle u(0)=x.
             \end{cases*}\]
 
-            Aleshores per la proposició \myref{prop:existeixen solucions improrrogables} tenim que existeix una solució maximal~\(\varphi_{x}\) d'aquest problema de Cauchy, i per la definició de \myref{def:problema de Cauchy} trobem que~\(\varphi_{x}(0)=x\) i hem acabat.
+            Aleshores per la proposició \myref{prop:existeixen-solucions-improrrogables} tenim que existeix una solució maximal~\(\varphi_{x}\) d'aquest problema de Cauchy, i per la definició de \myref{def:problema-de-Cauchy} trobem que~\(\varphi_{x}(0)=x\) i hem acabat.
         \end{proof}
     \end{proposition}
     \begin{definition}[Flux]
